--- a/proyecto_facturas/compras/templates/compras/buscar_cliente.html
+++ b/proyecto_facturas/compras/templates/compras/buscar_cliente.html
@@ -18,7 +18,7 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-			<header id="header" class="alt">
+				<header id="header" class="alt">
 					<h1><a href="{% url 'compras:index' %}">Prueba Python</a> by David A. Nader</h1>
 					<nav id="nav">
 						<ul>
@@ -26,14 +26,25 @@
 							<li>
 								<a href="#" class="icon fa-angle-down">CRUD</a>
 								<ul>
-									<li><a href="#">Clientes</a></li>
-									<li><a href="{% url 'compras:productos' %}">Productos</a></li>
-									<li><a href="{% url 'compras:sedes' %}">Sedes</a></li>
+									<li>
+										<a href="#">Productos</a>
+										<ul>
+											<li><a href="{% url 'compras:buscar_producto' %}">Buscar</a></li>
+											<li><a href="{% url 'compras:agregar_producto' %}">Agregar</a></li>
+										</ul>
+									</li>
+									<li>
+										<a href="#">Sedes</a>
+										<ul>
+											<li><a href="{% url 'compras:buscar_sede' %}">Buscar</a></li>
+											<li><a href="{% url 'compras:agregar_sede' %}">Agregar</a></li>
+										</ul>
+									</li>
 									<li>
 										<a href="#">Clientes</a>
 										<ul>
 											<li><a href="{% url 'compras:buscar_cliente' %}">Buscar</a></li>
-											<li><a href="#">Agregar</a></li>
+											<li><a href="{% url 'compras:agregar_cliente' %}">Agregar</a></li>
 										</ul>
 									</li>
 								</ul>
