--- a/proyecto_facturas/compras/templates/compras/manejar_factura.html
+++ b/proyecto_facturas/compras/templates/compras/manejar_factura.html
@@ -57,8 +57,8 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<h2>Buscar Producto</h2>
-						<p>Por favor busque su producto por el nombre o la descripción.</p>
+						<h2>Consultar Factura</h2>
+						<p> Consulte la factura por cliente.</p>
 					</header>
 					<div class="row">
 						<div class="12u">
@@ -93,35 +93,41 @@
 
 							<!-- Form -->
 								<section class="box">
-									<h3>Mis Productos (búsqueda)</h3>								
+									<h2>Factura para el cliente: ({{cliente.nombres}})</h2>	
+									<h3>Documento: {{cliente.documento}} </h3>							
 									<hr />
-									<form action="." method="GET">
-									<div class="row uniform 50%">
-										
-										    <div class="9u 12u(mobilep)">
-										    	<input type="text" name="q" value="{{ query|escape }}">
-										    </div>
-										    <div class="3u 12u(mobilep)">
-										    	<input type="submit" value="Search">
-										    </div>
-								  	</div>
+									<form action="." method="POST">
+									{% csrf_token %}
+									<div class="table-wrapper">
+										<form method="post" action="">
+										 	<table>
+										 		<thead>
+											 		<tr>
+														<th>Id Productos</th>
+														<th>Productos</th>
+														<th>Sede</th>
+														<th>Precio</th>
+													</tr>
+										 		</thead>
+										 		<tbody>
+										 			{{ formset.management_form }}
+												    {% for form in formset %}
+												    {{ form.id }}
+										 			<tr>
+												       <td> </td>
+												       <td>{{ form.id_producto }}</td>
+												       <td>{{ form.id_sede }}</td>
+												       <td>{{ form.precio }}</td>
+												    {% endfor %}
+											    	</tr>
+										 		</tbody>
+									    	</table>
+										</form>
+									</div>
+								  	<div class="3u 12u(mobilep)">
+										<p><input type="submit" value="Submit"></p>
+								    </div>
 								  	</form>
-									<hr />
-									  {% if query %}
-									    <h3>Resultados para"{{ query|escape }}":</h3>
-									    {% if results %}
-									      <div class="6u 12u(mobilep)">
-										      <ul>
-										      {% for producto in results %}
-										        <li>{{ producto|escape }}</li>
-										      {% endfor %}
-										      </ul>
-									      </div>
-									    {% else %}
-									      <p>No hay productos encontrados</p>
-									    {% endif %}
-									  {% endif %}
-
 								</section>
 						</div>
 					</div>
