--- a/proyecto_facturas/compras/templates/compras/index.html
+++ b/proyecto_facturas/compras/templates/compras/index.html
@@ -61,6 +61,7 @@
 					<ul class="actions">
 						<li><a href="{% url 'compras:agregar_compras' %}" class="button special">Comprar</a></li>
 						<li><a href="{% url 'compras:buscar_factura' %}" class="button">Consultar Factura</a></li>
+						<li><a href="{% url 'compras:buscar_factura_pdf' %}" class="button">Generar Factura</a></li>
 					</ul>
 				</section>
 
