App JSON web service completa. Se mejora el agregar compra para que contemple valores iniciales.

--- a/proyecto_facturas/compras/templates/compras/index.html
+++ b/proyecto_facturas/compras/templates/compras/index.html
@@ -61,7 +61,8 @@
 					<ul class="actions">
 						<li><a href="{% url 'compras:agregar_compras' %}" class="button special">Comprar</a></li>
 						<li><a href="{% url 'compras:buscar_factura' %}" class="button">Consultar Factura</a></li>
-						<li><a href="{% url 'compras:buscar_factura_pdf' %}" class="button">Generar Factura</a></li>
+						<li><a href="{% url 'compras:buscar_factura_pdf' %}" class="button">Generar Factura PDF</a></li>
+						<li><a href="{% url 'wscompras:buscar_factura_json' %}" class="button">Generar Factura JSON</a></li>
 					</ul>
 				</section>
 
