--- a/proyecto_facturas/compras/templates/compras/index.html
+++ b/proyecto_facturas/compras/templates/compras/index.html
@@ -57,7 +57,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<h2>Sistema de Compras</h2>
-					<p>Elija alguna de las dos opciones.</p>
+					<p>Elija alguna de las opciones.</p>
 					<ul class="actions">
 						<li><a href="{% url 'compras:agregar_compras' %}" class="button special">Comprar</a></li>
 						<li><a href="{% url 'compras:buscar_factura' %}" class="button">Consultar Factura</a></li>
@@ -71,40 +71,17 @@
 
 					<section class="box special">
 						<header class="major">
-							<h2>Introducing the ultimate mobile app
+							<h2>Registro en la tabla Log
 							<br />
-							for doing stuff with your phone</h2>
-							<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare<br />
-							adipiscing nunc adipiscing. Condimentum turpis massa.</p>
+							últimas actualizaciones</h2>
+							<div class="6u 12u(mobilep)">
+							<ul>
+								{% for a in actualizacion %}
+								<li>{{a.descripcion }} a las: {{a.fecha }}</li>
+								{% endfor %}
+							</ul>
+							</div>
 						</header>
-						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
-					</section>
-
-					<section class="box special features">
-						<div class="features-row">
-							<section>
-								<span class="icon major fa-bolt accent2"></span>
-								<h3>Magna etiam</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section>
-							<section>
-								<span class="icon major fa-area-chart accent3"></span>
-								<h3>Ipsum dolor</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section>
-						</div>
-						<div class="features-row">
-							<section>
-								<span class="icon major fa-cloud accent4"></span>
-								<h3>Sed feugiat</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section>
-							<section>
-								<span class="icon major fa-lock accent5"></span>
-								<h3>Enim phasellus</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section>
-						</div>
 					</section>
 
 					<div class="row">
