--- a/proyecto_facturas/compras/templates/compras/sedes_actualizar_form.html
+++ b/proyecto_facturas/compras/templates/compras/sedes_actualizar_form.html
@@ -57,8 +57,8 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<h2>Buscar Sedes</h2>
-						<p>Por favor busque su sede por el nombre o la dirección.</p>
+						<h2>Consultar Producto</h2>
+						<p>Por favor consulte su producto en los correspondietes campos.</p>
 					</header>
 					<div class="row">
 						<div class="12u">
@@ -93,38 +93,15 @@
 
 							<!-- Form -->
 								<section class="box">
-									<h3>Mis Sedes (búsqueda)</h3>								
+									<h3>Mi Sede (actualizar)</h3>								
 									<hr />
-									<form action="." method="GET">
-									<div class="row uniform 50%">
-										
-										    <div class="9u 12u(mobilep)">
-										    	<input type="text" name="q" value="{{ query|escape }}">
-										    </div>
-										    <div class="3u 12u(mobilep)">
-										    	<input type="submit" value="Search">
-										    </div>
-								  	</div>
-								  	</form>
-									<hr />
-									  {% if query %}
-									    <h3>Resultados para"{{ query|escape }}":</h3>
-									    {% if results %}
-									      <div class="6u 12u(mobilep)">
-										      <ul>
-										      {% for sede in results %}
-										        <li>
-										        <a href = "{% url 'compras:actualizar_sede' pk=sede.id %}">
-											        {{ sede|escape }}</a>
-										        </li>
-										      {% endfor %}
-										      </ul>
-									      </div>
-									    {% else %}
-									      <p>No hay sedes encontradas</p>
-									    {% endif %}
-									  {% endif %}
-
+								
+									<div class="table-wrapper">
+										<form action="" method="post">{% csrf_token %}
+										    <table> {{ form.as_p }}</table>
+										    <input type="submit" value="Actualizar" />
+										</form>
+									</div>
 								</section>
 						</div>
 					</div>
