--- a/proyecto_facturas/compras/templates/compras/buscar_producto.html
+++ b/proyecto_facturas/compras/templates/compras/buscar_producto.html
@@ -107,7 +107,17 @@
 								  	</div>
 								  	</form>
 									<hr />
-									  <form action="" method="get">
+									  
+
+								</section>
+						</div>
+					</div>
+					
+					<div class="row">
+						<div class="6u 12u(narrower)">
+
+							<section class="box special">	
+								 <h3>Registros para Actualizar</h3>				
 									  {% if query %}
 									    <h3>Resultados para"{{ query|escape }}":</h3>
 									    {% if results %}
@@ -129,11 +139,39 @@
 									      <p>No hay productos encontrados</p>
 									    {% endif %}
 									  {% endif %}
-								    </form>
-
-								</section>
+							</section>
 						</div>
+						<div class="6u 12u(narrower)">
+
+							<section class="box special">
+								<h3>Registros para Eliminar</h3>				
+									 {% if query %}
+									    <h3>Resultados para"{{ query|escape }}":</h3>
+									    {% if results %}
+									      <div class="6u 12u(mobilep)">
+										    	<ul>
+										      	{% for producto in results %}
+												  <li>
+											          <a href = "{% url 'compras:borrar_producto' pk=producto.id %}">
+											          {{ producto|escape }}
+											          </a>
+										          </li>
+										     	{% endfor %}
+										      	</ul>
+										  <div class="3u 12u(mobilep)">
+										    	<input type="submit" value="Submit">
+										  </div>
+									      </div>
+									    {% else %}
+									      <p>No hay productos encontrados</p>
+									    {% endif %}
+									  {% endif %}
+							</section>
+
+						</div>
+						
 					</div>
+					
 					<div class="row">
 						<div class="12u">
 
