--- a/proyecto_facturas/compras/templates/compras/buscar_sede.html
+++ b/proyecto_facturas/compras/templates/compras/buscar_sede.html
@@ -58,7 +58,7 @@
 				<section id="main" class="container">
 					<header>
 						<h2>Buscar Sedes</h2>
-						<p>Por favor busque su sede por el nombre o la dirección.</p>
+						<p>Por favor búsque su sede por el nombre o la dirección.</p>
 					</header>
 					<div class="row">
 						<div class="12u">
@@ -107,6 +107,15 @@
 								  	</div>
 								  	</form>
 									<hr />
+								</section>
+						</div>
+					</div>
+					
+					<div class="row">
+						<div class="6u 12u(narrower)">
+
+							<section class="box special">	
+								 <h3>Registros para Actualizar</h3>				
 									  {% if query %}
 									    <h3>Resultados para"{{ query|escape }}":</h3>
 									    {% if results %}
@@ -124,10 +133,35 @@
 									      <p>No hay sedes encontradas</p>
 									    {% endif %}
 									  {% endif %}
-
-								</section>
+							</section>
 						</div>
+						<div class="6u 12u(narrower)">
+
+							<section class="box special">
+								<h3>Registros para Eliminar</h3>				
+									  {% if query %}
+									    <h3>Resultados para"{{ query|escape }}":</h3>
+									    {% if results %}
+									      <div class="6u 12u(mobilep)">
+										      <ul>
+										      {% for sede in results %}
+										        <li>
+										        <a href = "{% url 'compras:borrar_sede' pk=sede.id %}">
+											        {{ sede|escape }}</a>
+										        </li>
+										      {% endfor %}
+										      </ul>
+									      </div>
+									    {% else %}
+									      <p>No hay sedes encontradas</p>
+									    {% endif %}
+									  {% endif %}
+							</section>
+
+						</div>
+						
 					</div>
+					
 					<div class="row">
 						<div class="12u">
 
